tests/compile-fail/compile_fail__type_error__stackless__func_arg_neg_str.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: type error
  ┌─ <input>:7:22
  │
7 │       textSet(0, 0, -"abc");  
  │                     -^^^^^ a string
  │                     │ 
  │                     requires a numeric type


